[package]
name = "c-lexer"
version = "0.1.1"
authors = ["lsongzhi <lsongzhi@163.com>", "perdumonocle <konstantin_1987@mail.ru>"]
repository = "https://github.com/perdumonocle/c-lexer"
readme = "README.md"
keywords = ["C", "lexer", "parser", "tokenizer"]
categories = ["parser-implementations"]
license = "MIT"
description = "C lexer"
edition = "2018"

[dependencies]
phf = { version = "0.7", features = ["macros"] }
internship = "0.6"

[badges]
travis-ci = { repository = "perdumonocle/c-lexer", branch = "master" }

[profile.release]
lto = true

[profile.bench]
debug = true
lto = true
